Got dev env setup and first api enpoint

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,12 +1,14 @@
 #Grab the latest alpine image
-FROM alpine:latest
+FROM ubuntu:latest
 
 # Install python and pip
-RUN apk add --no-cache --update python3 py3-pip bash
+#RUN apk add --no-cache --update python3 py3-pip bash
+RUN apt-get update
+RUN apt-get -y install python3-pip
 ADD ./requirements.txt /tmp/requirements.txt
 
 # Install dependencies
-RUN pip3 install --no-cache-dir -q -r /tmp/requirements.txt
+RUN pip3 install --no-cache-dir -q -r  /tmp/requirements.txt
 
 # Add our code
 ADD ./ /opt/webapp/
